# ioc-protocols-models

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  MAINTAINERS.md  MANIFEST.in  Makefile  PACKAGE.md  PUBLISHING.md  README.md  SECURITY.md  build_wheel.sh  pyproject.toml  runme.sh  sonar-project.properties
.github/workflows/: ci.yaml  publish-go-bindings.yaml  publish.yaml  sstp-go-bindings.yml  sstp-python-bindings.yml
CSTP/JSON schema/: README.md
CSTP/documentation/: PROTOCOL_SPEC.md
CSTP/spec/: CSTP_FORMAL_MODEL.md
LSTP/JSON schema/: README.md
LSTP/documentation/: PROTOCOL_SPEC.md
LSTP/spec/: LSTP_FORMAL_MODEL.md
SSTP/: __init__.py  l9_base.py
SSTP/JSON schema/: ie-protocol.schema.json  snp-protocol.schema.json  sstp-schema.json
SSTP/base/: __init__.py  deliver.py  emit.py  episode.py  grounding.py
SSTP/compiler/: __init__.py  ast_nodes.py  parser.py
SSTP/documentation/: Artifacts.md  L9-formal.md  L9-new.md  L9.md  L9A2A.md  L9api.md  L9getting-started.md  L9header.md  L9lifecycle.md  L9teamtasks.md  PROTOCOL_SPEC.md  WHY_L9.md  cf-a2a-architecture.md  deadletter.md  index.html  protocol_reference.html  publish_docs.sh  schema_doc.css  schema_doc.min.js  version.json
SSTP/examples/: demo_a2a_l9.py  demo_a2a_l9_messages.json  demo_a2a_l9_run.json  demo_a2a_l9_tasks.json  demo_a2a_l9_ui.py  demo_a2a_pure.py  multi_protocol_demo.py  multi_protocol_run.json  run_demo.py  run_demo.sh
SSTP/l9/: __init__.py  deliver.py  emit.py  episode.py  grounding.py
SSTP/language-bindings/Python/: Makefile  README.md  pyproject.toml
SSTP/language-bindings/Python/src/sstp/: __init__.py  l9_base.py
SSTP/language-bindings/Python/src/sstp/epistemic/: __init__.py  local_replica.py  snapshot.py  stores.py  tom.py  vocabulary.py
SSTP/language-bindings/Python/src/sstp/ie/: __init__.py  adapter.py  agent_bus.py  assertion.py  epistemic_store.py  grounding.py  ie_engine.py  l9.py  message.py  tom.py
SSTP/language-bindings/Python/src/sstp/l9/: __init__.py  episode.py  tem.py
SSTP/language-bindings/Python/src/sstp/process/: __init__.py  coordinator.py  gate.py  session.py  store.py
SSTP/language-bindings/Python/src/sstp/satom/: __init__.py  cognition.py
SSTP/language-bindings/Python/src/sstp/snp/: __init__.py  _base.py  commit.py  contingency.py  convergence.py  delegation.py  evidence_bundle.py  exchange.py  intent.py  knowledge.py  l9.py  l9_bridge.py  memory_delta.py  negmas_sao.py  negotiate.py  panel_bus.py  query.py
SSTP/language-bindings/Python/src/sstp/tomcore/: __init__.py  cognition.py  cognition2.py  interaction.py  llm.py  orchestration.py  tom_channel.py  types.py
SSTP/language-bindings/Python/src/sstp/transport/: __init__.py  a2a_adapter.py
SSTP/language-bindings/Python/tests/: test_l9_bindings.py
SSTP/language_bindings/: publish_bindings.sh
SSTP/language_bindings/python/: ai_outshift_data_model-0.0.2-py3-none-any.whl  ai_outshift_data_model-0.0.3-py3-none-any.whl  ai_outshift_data_model-0.0.4-py3-none-any.whl  ai_outshift_data_model-0.0.5-py3-none-any.whl  generate.sh  pyproject.toml
SSTP/language_bindings/python/ai/outshift/: data_model.py
SSTP/pipeline/: __init__.py  base.py  phase.py  pipeline.py
SSTP/spec/: EPISTEMIC_DATA_STRUCTURES.md  IE_SUBPROTOCOL.md  SEMANTIC_NEGOTIATION_PROTOCOL.md  SNP_SUBPROTOCOL.md  SSTP_FORMAL_MODEL.md  l9_schema.json  siep.ioc
SSTP/subprotocol/: _l9_compat.py
SSTP/subprotocol/cip/language_bindings/python/: README.md  generate.sh  pyproject.toml
SSTP/subprotocol/cip/language_bindings/python/ai/outshift/cip/: data_model.py
SSTP/subprotocol/language_bindings/python/: pyproject.toml
SSTP/subprotocol/language_bindings/python/ai/: __init__.py
SSTP/subprotocol/language_bindings/python/ai/outshift/subprotocols/: __init__.py
SSTP/subprotocol/language_bindings/python/ai/outshift/subprotocols/cip/: __init__.py
SSTP/subprotocol/language_bindings/python/ai/outshift/subprotocols/sab/: __init__.py
SSTP/subprotocol/language_bindings/python/ai/outshift/subprotocols/siep/: __init__.py
SSTP/subprotocol/language_bindings/python/ai/outshift/subprotocols/tfp/: __init__.py
SSTP/subprotocol/sab/language_bindings/python/: README.md  ai_outshift_sab_data_model-0.0.1-py3-none-any.whl  data_model.py  generate.sh  generated_models.py  pyproject.toml
SSTP/subprotocol/sab/language_bindings/python/ai/outshift/sab/: data_model.py
SSTP/subprotocol/siep/language_bindings/python/: README.md  __init__.py  builder.py  demo.py  engine.py  generate.sh  message_store.py  negotiate.py  panel_bus.py  pyproject.toml  siep_base.py
SSTP/subprotocol/siep/language_bindings/python/ai/outshift/siep/: data_model.py
SSTP/subprotocol/siep/language_bindings/python/epistemic/: __init__.py  snapshot.py  stores.py  tom.py  vocabulary.py
SSTP/subprotocol/siep/language_bindings/python/tomcore/: __init__.py  cognition.py  interaction.py  llm.py  orchestration.py
SSTP/subprotocol/tfp/language_bindings/python/: README.md  __init__.py  ai_outshift_tfp_data_model-0.0.1-py3-none-any.whl  data_model.py  generate.sh  generated_models.py  pyproject.toml  test_tfp.py  tfp_models.py
SSTP/subprotocol/tfp/language_bindings/python/ai/outshift/tfp/: __init__.py  data_model.py
SSTP/tests/: test_l9_header_regression.py
SSTP/utils/: litellm_util.py  llm.py
app/: __init__.py  requirements.txt
app/src/: __init__.py  common.py  health_check.py  mock_services.py  server.py  test.py
docs/: troubleshooting.md  workflows.md
ioc_l9/: Makefile  __init__.py  epistemic.py  primitives.py  representation_state.py  siep_builder.py  siep_engine.py  state_mgmt.py  utils.py
ioc_l9/docs/: Artifacts.md  config.json  (+1 more)
ioc_l9_artifacts/: version.json
l9/: __init__.py  message.py
scripts/: build_wheel.sh  build_wheels.sh  compile_spec.py  generate_artifacts.sh  generate_schemas.py  interaction_engine.py  lint.sh  package_models.sh  publish_artifacts.sh  release_artifacts.sh  siep_demo.py  unit-test.sh
src/: __init__.py  epistemic.py  l9.py  primitives.py  state_mgmt.py
tests/: run_tests.sh
woke/: rules.yaml
(+274 files in other folders)
