# Copyright 2026 Cisco Systems, Inc. and its affiliates
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ai-outshift-all-models"
version = "0.1.0"
description = "Outshift IOC protocol all data models (ai.outshift namespace)"
requires-python = ">=3.10,<3.14"
dependencies = ["pydantic>=2.0"]

[tool.poetry]
packages = [{include = "ai"}]

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = ">=0.25.0"
pytest = ">=7.0.0"
python-dotenv = ">=1.0.0,<2.0"
black = ">=26.3.1"
