# Copyright 2026 Cisco Systems, Inc. and its affiliates
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ioc-l9-all-models"
version = "0.0.1"
description = "IOC L9 Protocol Package"
authors = []
packages = [{include = "ai"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic = ">=2.0"
json-schema-for-humans = ">=0.47.0"
litellm = ">=1.89.3"
urllib3 = ">=2.7.0"
a2a-sdk = "^1.1.0"

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = ">=0.25.0"
pytest = ">=7.0.0"
openai = "^2.41.0"
python-dotenv = ">=1.0.0,<2.0"
json-schema-for-humans = ">=0.47.0"
black = ">=26.3.1"
