[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sstp"
version = "0.1.0"
description = "Python bindings for the Structured Semantic Transport Protocol (SSTP) L9 stack"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
snp = ["negmas>=0.10"]
dev = ["pytest>=8", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
