[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-outshift-data-model"
# NOTE: version is auto-stamped by `make build_wheel` from SSTP/spec/l9_schema.json "version" field.
# If building manually, bump this to match the schema version.
version = "0.0.3"
description = "IOC L9 Protocol Data Models"
authors = []
packages = [{include = "ai"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = ">=2.0"
