# Copyright 2026 Cisco Systems, Inc. and its affiliates
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-outshift-subprotocols"
version = "0.0.1"
description = "SSTP subprotocol public API: SIEP, CIP, SAB (re-exports from SSTP.subprotocol.*)"
authors = []
packages = [{include = "ai"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = ">=2.0"
ai-outshift-data-model = ">=0.0.4"
