# Copyright 2026 Cisco Systems, Inc. and its affiliates
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-outshift-sab-data-model"
# NOTE: version is auto-stamped by `make build_sab_wheel` from SSTP/subprotocol/sab/spec/sab_schema.json "version" field.
# If building manually, bump this to match the SAB schema version.
version = "0.1.2"
description = "IOC SAB Subprotocol Data Models"
authors = []
packages = [{include = "ai"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = ">=2.0"
ai-outshift-data-model = ">=0.0.5"
